IY Report: Proof read document for the first time.
Also includes misc corrections and updated content.

--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -7,7 +7,7 @@
 }
 
 @article{mantid,
-    author    = "Mantid Project",
+    author    = "{Mantid Project}",
     title     = "Mantid: Manipulation and Analysis Toolkit for Instrument Data",
     year      = "2013",
     doi  	  = "10.5286/SOFTWARE/MANTID",
@@ -67,6 +67,14 @@
     month = "August",
     year = "2014",
     howpublished = "\url{http://www.opengenie.org/Main_Page}",
+}
+
+@misc{castep2014home,
+    author = "{CASTEP}",
+    title = "CASTEP Homepage",
+    month = "September",
+    year = "2014",
+    howpublished = "\url{http://www.castep.org}",
 }
 
 @misc{mantid2014history,
@@ -140,4 +148,11 @@
     booktitle = "Neutron Scattering Applications and Techniques",
     publisher = "Springer",
     year      = "2008",
+}
+
+@misc{hoc2007,
+    author    = "{House of Commons Science and Technology Committee}",
+    title     = "Office of Science and Innovation: Scrutiny Report 2005 and 2006",
+    year     = "2007",
+    howpublished = "ISBN 0-215-03350-7",
 }
