Add CV and convering letter for demonstrating

--- a/personal/jackson-cv-2014.tex
+++ b/personal/jackson-cv-2014.tex
@@ -32,8 +32,8 @@
 \section{\sc Contact Information}
 \vspace{.05in}
 \begin{tabular}{@{}p{2in}p{4in}}
-24 Kineton Road             & {\it Tel:}  07895 318714 \\                  
-Oxfordshire, OX1 4PG & {\it E-mail:}  samueljackson@outlook.com\\       
+54 Rhosendre, Waun Fawr,             & {\it Tel:}  07895 318714 \\                  
+Aberystwyth, SY23 3PU & {\it E-mail:}  slj11@aber.ac.uk\\       
 \end{tabular}
 
 \section{\sc Education}
@@ -43,43 +43,39 @@ Oxfordshire, OX1 4PG & {\it E-mail:}  samueljackson@outlook.com\\
 \begin{list1}
 \item[] MEng. Software Engineering, December 2011 (expected
   graduation date: June 2016) \\
-
 \end{list1}
 
 \section{\sc Professional Experience}
 {\bf Software Developer, STFC, Rutherford Appleton Laboratory}, Harwell, Oxfordshire, UK
 
 \vspace{-.3cm}
-{\em Year in Industry} \hfill {\bf July, 2013 - June, 2014}\\
-I am currently employed as a software developer for ISIS Neutron source based at Rutherford Appleton Laboratory. 
-I work on the Mantid data analysis and visualisation project with the role of aiding the integration and development of scientific workflows for the instrument scientists in the ISIS molecular spectroscopy group.
+{\em Year in Industry} \hfill {\bf July, 2013 - August, 2014}\\
+I have recently been employed as a software developer for ISIS Neutron source based at Rutherford Appleton Laboratory in Harwell, Oxfordshire to develop the Mantid neutron and muon data analysis application. This project was primarily written in C++ and Python. I was primarily responsible for the development of the framework for indirect geometry instruments, but also helped develop the general framework during my time with the project. I was involved with every step of the development process from requirements gathering to design, through to implementation, testing, and maintenance. My original contract was extended so I could continue working through the summer before university began.
 
 {\bf Practical Demonstrator, University of Aberystwyth}, Ceredigion, Wales, UK
 
 \vspace{-.3cm}
 \hfill {\bf  October, 2012 - June, 2013}\\
-I was employed as a practical demonstrator for Aberystwyth University. This position involved being on hand during first year advanced programming practical sessions to helping students with any problems they might have with either their worksheets or assignments. I was also responsible for ensuring that students get there worksheets signed off before leaving each session. 
-
-This role is helped to further develop my verbal communication skills through developing my ability to impart technical knowledge of Java and Haskell to other students.
+I was previously employed as a practical demonstrator for Aberystwyth University. This position involved being on hand during first year advanced programming practical sessions to help students with any problems they might have with their worksheets and assignments and signing off on the completed work. I primarily helped with practical sessions teaching Java and Haskell.
 
 \section{\sc Honors and Awards} 
-Glyn Emery prize for highest course performance as first year student, University of Aberystwyth, 2012.
+Glyn Emery prize for best first year student, University of Aberystwyth, 2012.
 
-\section{\sc Skills} 
+\section{\sc Knowledge and  Skills} 
 \begin{list2}
 \item Languages:  C++, Python, C, Java, Haskell, JavaScript, PHP.
 \item Applications: Eclipse, Qt Designer.
-\item Tools: Git, CMake, GDB, \LaTeX.
-\item Libraries: Boost, Numpy, Scipy, CxxTest, Qt, JQuery.
-\item Operating Systems:  Unix/Linux, Windows and Mac OS X.\\ 
+\item Tools: Git, CMake, GDB, Valgrind, \LaTeX.
+\item Libraries: Boost, Numpy, Scipy, CxxTest, JUnit, Qt, JQuery.
+\item Operating Systems:  Unix/Linux, Mac OSX, and Windows.\\ 
 \end{list2}
 
 \section{\sc Volunteering} 
 {\bf Student Ambassador, University of Aberystwyth}, Aberystwyth, Ceredigion, UK
 
 \vspace{-.3cm}
-\hfill {\bf July, 2012 - June, 2013}\\
-I volunteered to be an open day and visit day ambassador for the university. My position was to talk to prospective students and their families about what it is like to live and study in Aberystwyth. I was also responsible for giving tours of the computer science department and helping to get prospective students to talks and interviews conducted by the department on time.
+\hfill {\bf July, 2012 - June, 2013, September 2014 - Present}\\
+I am currently volunteering to be an open day and visit day ambassador for the university. The role requires me to talk to prospective students and their families about what it is like to live and study in Aberystwyth. I am also responsible for giving tours of the computer science department and helping to get prospective students to talks and interviews conducted by the department on time.
 
 \section{\sc References}
 Dr. Lynda Thomas, Tutor, llt@aber.ac.uk \\
